@@ -2,16 +2,17 @@
 require_once 'Hamcrest/AbstractMatcherTest.php';
 require_once 'Hamcrest/Core/StringContains.php';
 
-class Hamcrest_Core_StringContainsTest extends Hamcrest_AbstractMatcherTest
+class Hamcrest_Core_StringContainsIgnoringCaseTest extends Hamcrest_AbstractMatcherTest
 {
-  
-  const EXCERPT = 'EXCERPT';
+
+  const EXCERPT = 'ExcErPt';
   
   private $_stringContains;
   
   public function setUp()
   {
-    $this->_stringContains = Hamcrest_Core_StringContains::containsString(self::EXCERPT);
+    $this->_stringContains = Hamcrest_Core_StringContains
+        ::containsStringIgnoringCase(strtolower(self::EXCERPT));
   }
   
   protected function createMatcher()
@@ -19,7 +20,7 @@ class Hamcrest_Core_StringContainsTest extends Hamcrest_AbstractMatcherTest
     return $this->_stringContains;
   }
   
-  public function testEvaluatesToTrueIfArgumentContainsSubstring()
+  public function testEvaluatesToTrueIfArgumentContainsSpecifiedSubstring()
   {
     $this->assertTrue($this->_stringContains->matches(self::EXCERPT . 'END'),
       'should be true if excerpt at beginning'
@@ -49,20 +50,20 @@ class Hamcrest_Core_StringContainsTest extends Hamcrest_AbstractMatcherTest
     );
   }
 
-  public function testEvaluatesToFalseIfArgumentContainsSubstringIgnoringCase()
+  public function testEvaluatesToTrueIfArgumentContainsExactSubstring()
   {
-    $this->assertFalse($this->_stringContains->matches(strtolower(self::EXCERPT)),
+    $this->assertTrue($this->_stringContains->matches(strtolower(self::EXCERPT)),
       'should be false if excerpt is entire string ignoring case'
     );
-    $this->assertFalse($this->_stringContains->matches('START' . strtolower(self::EXCERPT) . 'END'),
+    $this->assertTrue($this->_stringContains->matches('START' . strtolower(self::EXCERPT) . 'END'),
       'should be false if excerpt is contained in string ignoring case'
     );
   }
   
   public function testHasAReadableDescription()
   {
-    $this->assertDescription('a string containing "'
-        . self::EXCERPT . '"', $this->_stringContains);
+    $this->assertDescription('a string containing in any case "'
+        . strtolower(self::EXCERPT) . '"', $this->_stringContains);
   }
   
 }
